--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-app",
-  "version": "1.0.0",
+  "name": "AppDiscovery_school-bus-query",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
