--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "lodash": "*",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
